# physical-magnitude

./: README.md  examples.py  package.json  pyproject.toml  requirements.txt
docs/: .buildinfo  api.html  genindex.html  howto.html  index.html  info.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorial.html
docs/.doctrees/: api.doctree  environment.pickle  howto.doctree  index.doctree  info.doctree  tutorial.doctree
docs/_sources/: api.rst.txt  index.rst.txt  tutorial.rst.txt
docs/source/: api.rst  conf.py  howto.rst  index.rst  info.rst  tutorial.rst  usage.rst
magnitude/: __init__.py  magnitude.py
src/: magnitude.py
src/magnitude/: __init__.py  magnitude.py
tests/: test_magnitude.py
